--- a/style.css
+++ b/style.css
@@ -8,72 +8,114 @@
     src: url(fonts/proximanovaBold.ttf);
 }
 
-html {
-    background: url(gifs/gosOne.gif), url(gifs/narutoOne.gif) no-repeat center center fixed;
-    background-size: cover;
-}
-
-/* Styling Name */    
+/* Styling Name Title */    
 #title {
     font-family: "Times New Roman", Times, serif;
-    color: white;
-    font-size: 45px;
+    font-size: 30px;
     font-style: normal;
     letter-spacing: .1em;
     text-transform: uppercase;
     line-height: 1.3em;
 }
 
+#title a {
+    text-decoration: none;
+    color: black;
+}
+
+/* Styling the navigation list */
 #navigation {
     font-family: proximaNovaBold, Futura, futuraPro, sans-serif;
-    color: white;
     letter-spacing: .2em;
-    font-size: 13px;
-}
-
-/* Styling the unordered list */
-ul {
-    list-style-type: none;
-    margin: none;
-    padding: none;
-}
-
-ul li {
-    display: inline;
-    margin-left: 15.5px;
+    font-size: 10px;
 }
 
 ul a {
-    color: white;
+    text-decoration: none;
+    opacity: 1;
+}
+
+ul a:link {
     text-decoration: none;
 }
 
-a:link {
+ul a:visited {
     text-decoration: none;
+    color: black;
 }
 
-a:visited {
-   text-decoration: none;
-}
-
-a:hover {
+ul a:hover {
     text-decoration: none;
-    opacity: 0.6;
+    opacity: 0.8;
 }
     
-/* Positioning */
-#title, #navigation {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.link {
+    opacity: 0.6;
 }
 
+/* Positioning the elements */
 #title {
-    bottom: 31.1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 63px;
+    margin-right: 13.6px;
 }
 
 #navigation {
-    right: 23.5%;
-    top: 53%;
+    text-align: center;
+    margin-right: 20px;
 }
+
+#navigation ul {
+    display: inline-block;
+    list-style: none;
+}
+
+#navigation li {
+    display: inline;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    text-align: center
+}
+
+li {
+    display: inline;
+    list-style: none; 
+}
+
+#navigation a {
+    display:inline-block;
+    margin-right: -3px;
+    width: 100px;
+    text-align: center;
+    padding: 5px;
+    text-decoration:none;
+    text-transform:uppercase;
+    margin-top: 25px;
+}
+
+/* Styling the biography part */
+#bio {
+    margin-top: 3%;
+}
+
+.text {
+    float: left;
+    width: 50%;
+    padding-left: 2%;
+    font-family: futuraPro, Futura, proximaNovaBold, sans-serif;
+    font-size: 14px;
+    line-height: 2em;
+    letter-spacing: 0.02em;
+}
+
+.me {
+    float: right;
+    width: 43%;
+    margin: 1% 2% 2% 2%;
+}
+
