fixed centered title on front page

--- a/frontPage.css
+++ b/frontPage.css
@@ -59,7 +59,8 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 275px;
+    margin-top: 25.2%;
+
 }
 
 #navigation {
