--- a/frontPage.css
+++ b/frontPage.css
@@ -46,21 +46,20 @@ a:link {
 }
 
 a:visited {
-   text-decoration: none;
+    text-decoration: none;
 }
 
 a:hover {
     text-decoration: none;
     opacity: 0.6;
 }
-    
+
 /* Positioning */
 #title {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 25.2%;
-
+    margin-top: 5.95em;
 }
 
 #navigation {
