--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 /* Styling the navigation list */
 #navigation {
-    font-family: proximaNovaBold, Futura, futuraPro, sans-serif;
+    font-family: proximaNovaBold, Futura, futuraPro, helvetica, sans-serif;
     letter-spacing: .2em;
     font-size: 10px;
 }
@@ -66,6 +66,8 @@ ul a:hover {
 #navigation {
     text-align: center;
     margin-right: 20px;
+    position: relative;
+    z-index: 3;
 }
 
 #navigation ul {
@@ -99,7 +101,7 @@ li {
     margin-top: 25px;
 }
 
-/* Styling the biography part */
+/* Styling the about page */
 #bio {
     margin-top: 3%;
 }
@@ -107,16 +109,98 @@ li {
 .text {
     float: left;
     width: 50%;
-    padding-left: 2%;
-    font-family: futuraPro, Futura, proximaNovaBold, sans-serif;
+    padding-left: 6%;
+    font-family: futuraPro, Futura, proximaNovaBold, helvetica, sans-serif;
     font-size: 14px;
     line-height: 2em;
     letter-spacing: 0.02em;
 }
 
-.me {
-    float: right;
-    width: 43%;
-    margin: 1% 2% 2% 2%;
+.text a {
+    text-decoration: none;
+    color: black;
 }
 
+.me {
+    float: right;
+    width: 30%;
+    margin: 2% 7% 2% 2%;
+}
+
+/* Styling the journal page */
+#gallery img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+.one {
+    width: 65%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3.75%;
+}
+
+.two {
+    margin-top: 1%;
+    width: 100%;
+}
+
+.three {
+    margin-top: 1%;
+    width: 50%;
+    z-index: 2;
+}
+
+.four {
+    margin-top: 1%;
+    width: 90%;
+}
+
+/* Styling the text overlay */
+#overlay {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    cursor: pointer;
+}
+
+#titleOne {
+    font-family: Futura, futuraPro, helvetica, sans-serif; 
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    font-size: 7em;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+#titleTwo {
+    font-family: Futura, futuraPro, helvetica, sans-serif; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 7em;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+#titleThree {
+    font-family: Futura, futuraPro, helvetica, sans-serif; 
+    position: absolute;
+    top: 50%;
+    left: 95%;
+    font-size: 7em;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
