Changed the front page gif

--- a/frontPage.css
+++ b/frontPage.css
@@ -9,7 +9,7 @@
 }
 
 html {
-    background: url(gifs/akiraTwo.gif), url(gifs/narutoOne.gif) no-repeat center center fixed;
+    background: url(gifs/totoro.gif) no-repeat center center fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
