--- a/frontPage.css
+++ b/frontPage.css
@@ -26,6 +26,7 @@ html {
     letter-spacing: .1em;
     text-transform: uppercase;
     line-height: 1.3em;
+    margin-left: 10px;
 }
 
 #navigation {
